ha-proxy/redis-haproxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: svc-redis-sentinel-proxy
    namespace: redis
    annotations:
        kubernetes.io/ingress.class: “nginx”
spec:
    rules:
      - http:
          paths:
            - backend:
                serviceName: svc-redis-sentinel-proxy
                servicePort: 6379
              path: /
